--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-  <canvas id="canvas" width="800" height="800"></canvas>
-  <script src="./dist/index.js"></script>
+  <canvas id="canvas" width="1000" height="1000"></canvas>
+  <script type="module" src="/src/index.ts"></script>
 </body>
 
 </html>
